WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271088
[UnifiedPDF] Pinch zooming does not disable automatically resize option
https://bugs.webkit.org/show_bug.cgi?id=271088
Summary
[UnifiedPDF] Pinch zooming does not disable automatically resize option
Sammy Gill
Reported
2024-03-15 16:33:40 PDT
When pinch zooming is performed the automatically resize context menu item should get disabled and the document should no longer update to fit the available width
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-15 16:40:35 PDT
<
rdar://problem/124717930
>
Sammy Gill
Comment 2
2024-03-15 16:44:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25985
EWS
Comment 3
2024-03-18 16:13:50 PDT
Committed
276309@main
(a7b53c30f92b): <
https://commits.webkit.org/276309@main
> Reviewed commits have been landed. Closing PR #25985 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug