[UnifiedPDF] Pinch and keyboard zooming do not disable automatically resize option. https://bugs.webkit.org/show_bug.cgi?id=271088 rdar://problem/124717930

Reviewed by Tim Horton.

When pinch zooming is performed we should stop updating the document
fitting scale. Zooming via keyboard shortcuts should also have the same
beheavior. Let's do this when the page's scale factor has changed so
that it catches both cases.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::didBeginMagnificationGesture):

Canonical link: https://commits.webkit.org/276309@main